--- a/css/student_css/style_msgbox.css
+++ b/css/student_css/style_msgbox.css
@@ -30,7 +30,7 @@ nav:after {
 }
 
 nav h2 {
-  font-family: Roboto Regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
   font-weight: inherit;
   font-size: 140%;
   margin-bottom: 0px;
@@ -46,7 +46,7 @@ nav h3 {
   font-size: 170%;
   margin-bottom: 0px;
   letter-spacing: 6px;
-  font-family: Generica regular, sans-serif;
+  font-family: 'genericaregular', sans-serif;
 }
 
 nav .Alogo {
@@ -85,7 +85,7 @@ nav ul li a {
   font-size: 1.6em;
   padding: 8px 15px;
   letter-spacing: 1px;
-  font-family: Roboto Light, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
 }
 
 nav ul li a:visited {
@@ -198,7 +198,7 @@ nav ul ul li {
 nav ul ul li a {
   color: black;
   line-height: 50px;
-  font-family: Roboto bold, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
 }
 
 nav ul ul ul li {
@@ -309,11 +309,11 @@ header {
 p {
   font-size: 30px;
   font-weight: 500;
-  font-family: Generica regular, sans-serif;
+  font-family: 'genericaregular', sans-serif;
 }
 
 article p {
-  font-family: Roboto regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
   color: #124254;
   font-weight: inherit;
   font-size: 20px;
@@ -322,7 +322,7 @@ article p {
 }
 
 article h1 {
-  font-family: Generica regular, sans-serif;
+  font-family: 'genericaregular', sans-serif;
   color: #18566e;
   font-weight: inherit;
   font-size: 55px;
@@ -425,7 +425,7 @@ div li span {
 }
 
 aside p.Aelec-guide-txt {
-  font-family: Roboto Regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
   text-align: justify;
   font-size: 1.6em;
   margin-top: 3em;
@@ -458,7 +458,7 @@ aside p.Aelec-guide-txt {
 div p.footer-txt {
   position: relative;
   top: .5em;
-  font-family: Roboto Regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
   letter-spacing: 7px;
   font-size: 1em;
   color: #ffffff;
@@ -474,7 +474,7 @@ div p.footer-txt {
   font-weight: 400;
   width: 100%;
   text-align: center;
-  font-family: Roboto Regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
   letter-spacing: 6px;
 }
 
@@ -510,7 +510,7 @@ iframe {
 }
 
 .btn {
-  font-family: Roboto Regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
   display: inline-block;
   padding: 6px 12px;
   margin: 0px;
@@ -586,7 +586,7 @@ iframe {
   background: #fff192 none repeat scroll 0 0;
   border-radius: 3px;
   color: #3b444b;
-  font-family: Roboto regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
   font-size: 14px;
   margin: 0;
   padding: 5px 10px 5px 12px;
@@ -598,7 +598,7 @@ iframe {
   display: block;
   font-size: 10px;
   margin: 3px 0 0;
-  font-family: Roboto regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
 }
 
 .received_withd_msg {
@@ -613,7 +613,7 @@ iframe {
 
 .sent_msg p {
   background: #fece4b none repeat scroll 0 0;
-  font-family: Roboto regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
   border-radius: 3px;
   font-size: 14px;
   margin: 0;
