--- a/css/admin_css/bootstrap4.5.2_monitor.css
+++ b/css/admin_css/bootstrap4.5.2_monitor.css
@@ -1,9 +1,3 @@
-/*!
- * Bootstrap v4.5.2 (https://getbootstrap.com/)
- * Copyright 2011-2020 The Bootstrap Authors
- * Copyright 2011-2020 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
- */
 
 :root {
   --blue: #007bff;
@@ -41,7 +35,7 @@
 }
 
 html {
-  font-family: sans-serif;
+  font-family: 'Roboto-regular', sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
