--- a/css/admin_css/style_monitor.css
+++ b/css/admin_css/style_monitor.css
@@ -43,7 +43,7 @@ h3.aLogo-txt2 {
 	font-size: 120%;
 	margin-bottom: 0px;
 	letter-spacing: 6px;
-	font-family: genericaregular, sans-serif;
+	font-family: 'genericaregular', sans-serif;
 }
 
 h3.aLogo-txt2 a {
@@ -735,17 +735,26 @@ h2.aHeader-txt {
 	z-index: -1000;
 }
 
-.Bvcontainer {
+/*.Bvcontainer {
 	position: relative;
 	width: 100%;
 	justify-content: space-around;
 	display: grid;
-	/*grid-column-gap: 10%;*/
-	/*grid-row-gap: 10%;*/
 	grid-template-columns: repeat(auto-fit, minmax(100px, 4fr));
 	grid-template-rows: repeat(1, 200px);
 	margin-top: 4%;
 	z-index: -1000;
+}*/
+
+.Bvcontainer{
+	position: relative;
+	width: 100%;
+	justify-content: space-around;
+	display: grid; 
+	grid-column-gap: 20px; 
+	grid-row-gap: 5%;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	grid-template-rows: repeat(1, 250px);  
 }
 
 .Bvcontainer .Bcard {
