--- a/css/student_css/style_monitor.css
+++ b/css/student_css/style_monitor.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: Roboto-regular, Roboto Thin, genericaregular, sans-serif;
+  font-family: 'Roboto-regular', Roboto Thin, 'genericaregular', sans-serif;
   background-image: url("../../img/studentBG.png");
   background-size: cover;
   font-size: 100%;
@@ -29,7 +29,7 @@ nav:after {
 }
 
 nav h2 {
-  font-family: Roboto-regular, sans-serif;
+  font-family:'Roboto-regular', sans-serif;;
   font-weight: inherit;
   font-size: 140%;
   margin-bottom: 0px;
@@ -45,7 +45,7 @@ nav h3 {
   font-size: 170%;
   margin-bottom: 0px;
   letter-spacing: 6px;
-  font-family: genericaregular, sans-serif;
+  font-family: 'genericaregular', sans-serif;
 }
 
 nav .logo {
@@ -83,7 +83,7 @@ nav ul li a {
   font-size: 1.6em;
   padding: 8px 15px;
   letter-spacing: 1px;
-  font-family: Roboto-regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;;
 }
 
 nav ul li a:visited {
@@ -196,7 +196,7 @@ nav ul ul li {
 nav ul ul li a {
   color: black;
   line-height: 50px;
-  font-family: Roboto-regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;;
 }
 
 nav ul ul ul li {
@@ -301,11 +301,11 @@ header {
 p {
   font-size: 30px;
   font-weight: 500;
-  font-family: Generica regular, sans-serif;
+  font-family: 'generica-regular', sans-serif;
 }
 
 article p {
-  font-family: Roboto regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;;
   color: #124254;
   font-weight: inherit;
   font-size: 20px;
@@ -314,7 +314,7 @@ article p {
 }
 
 article h1 {
-  font-family: Generica regular, sans-serif;
+  font-family: 'genericaregular', sans-serif;
   color: #18566e;
   font-weight: inherit;
   font-size: 55px;
@@ -355,7 +355,6 @@ img.logos {
 
 .logo-container {
   position: relative;
-  /* float: left; */
   display: -webkit-flex;
   display: flex;
   margin-left: 0px;
@@ -386,7 +385,7 @@ img.logos {
 div p.footer-txt {
   position: relative;
   top: .5em;
-  font-family: Roboto Regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;;
   letter-spacing: 7px;
   font-size: 1em;
   color: black;
@@ -449,7 +448,7 @@ div li span {
 }
 
 div p.elec-guide-txt {
-  font-family: Roboto Regular, sans-serif;
+  font-family: 'Roboto-regular', sans-serif;;
   text-align: justify;
   font-size: 1.6em;
   margin-top: 3em;
@@ -458,7 +457,7 @@ div p.elec-guide-txt {
 /* On-Going Election*/
 
 .Belec1 p {
-  font-family: Roboto regular;
+  font-family: 'Roboto-regular', sans-serif;;
   color: #1f6f8f;
   font-weight: inherit;
   font-size: 400%;
@@ -468,7 +467,7 @@ div p.elec-guide-txt {
 }
 
 .Bon1 h1 {
-  font-family: Roboto regular;
+  font-family: 'Roboto-regular', sans-serif;;
   color: #142d4f;
   font-weight: inherit;
   font-size: 550%;
@@ -492,7 +491,7 @@ div p.elec-guide-txt {
 }
 
 .Bres p {
-  font-family: Roboto;
+  font-family:'Roboto-regular', sans-serif;;
   letter-spacing: 1px;
   font-size: 100%;
 }
@@ -500,7 +499,7 @@ div p.elec-guide-txt {
 /*No On-going Election*/
 
 .Belec2 p {
-  font-family: Roboto regular;
+  font-family:'Roboto-regular', sans-serif;;
   color: #1f6f8f;
   font-weight: inherit;
   font-size: 400%;
@@ -510,7 +509,7 @@ div p.elec-guide-txt {
 }
 
 .Bon2 h1 {
-  font-family: Roboto regular;
+  font-family: 'Roboto-regular', sans-serif;;
   color: #142d4f;
   font-weight: inherit;
   font-size: 550%;
@@ -520,7 +519,7 @@ div p.elec-guide-txt {
 }
 
 .Bon3 h1 {
-  font-family: Roboto regular;
+  font-family: 'Roboto-regular', sans-serif;;
   color: #142d4f;
   font-weight: inherit;
   font-size: 100%;
@@ -532,7 +531,7 @@ div p.elec-guide-txt {
 /* End of Election*/
 
 .Belec_end1 p {
-  font-family: Roboto regular;
+  font-family: 'Roboto-regular', sans-serif;;
   color: #1f6f8f;
   font-weight: inherit;
   font-size: 400%;
@@ -542,7 +541,7 @@ div p.elec-guide-txt {
 }
 
 .Belec_end2 h1 {
-  font-family: Roboto regular;
+  font-family: 'Roboto-regular', sans-serif;;
   color: #142d4f;
   font-weight: inherit;
   font-size: 550%;
@@ -553,7 +552,7 @@ div p.elec-guide-txt {
 }
 
 .Belec_end3 p {
-  font-family: Roboto regular;
+  font-family:'Roboto-regular', sans-serif;;
   color: #1f6f8f;
   font-weight: inherit;
   font-size: 500%;
@@ -563,7 +562,7 @@ div p.elec-guide-txt {
 }
 
 .Bres_end h1 {
-  font-family: Roboto regular;
+  font-family: 'Roboto-regular', sans-serif;;
   color: #142d4f;
   font-weight: inherit;
   font-size: 150%;
@@ -581,7 +580,7 @@ div p.elec-guide-txt {
 }
 
 .Bhoverme h1 {
-  font-family: Roboto black;
+  font-family:'Roboto-regular', sans-serif;;
   color: #142d4f;
   font-size: 500%;
   position: relative;
@@ -1031,7 +1030,7 @@ div p.elec-guide-txt {
 }
 
 .Belec_container>div>p {
-  font-family: Roboto;
+  font-family: 'Roboto-regular', sans-serif;;
   font-size: 15px;
   object-fit: cover;
   text-align: center;
@@ -1040,6 +1039,189 @@ div p.elec-guide-txt {
 .Bpstn .Bnum_votes {
   color: red;
   font-weight: bold;
+}
+
+/* Vote Status Percentage */
+.Bcon{
+  width: 60%;
+  margin-left:auto;
+  margin-right:auto;
+  margin-bottom: 10%;
+}
+
+.Bvotestat p{
+  font-family: 'Roboto-regular', sans-serif;
+  color: #ffc423;
+  font-weight: inherit;
+  font-size: 300%;
+  position: relative;
+  letter-spacing: 3px;
+  text-align: center;
+  margin-top: 5%;
+  z-index:-1000;
+ }
+.Bvcontainer{
+  position: relative;
+  width: 100%;
+  justify-content: space-around;
+  display: grid; 
+  grid-column-gap: 20px; 
+  grid-row-gap: 5%;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-rows: repeat(1, 250px);  
+  /* z-index: -1000; */
+}
+.Bvcontainer .Bcard{
+  position: relative;
+  width: 100%;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+  border-radius: 4px;
+  text-align: center;
+  transition: 0.5s;
+}
+.Bvcontainer .Bcard:before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0%;
+  width: 100%;
+  height: rgba(73, 163, 0, 0.03);
+  pointer-events: none;
+}
+.Bpercent{
+  position:relative;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background:#ffc423;
+  z-index: 1000;
+}
+.Bpercent .Bnumber{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+.Bpercent .Bnumber h2{
+  color:#003d55;
+  font-weight: 700;
+  margin-top: 55px;
+  font-size: 30px;
+  transition: 0.5s;
+  margin-left: 10px;
+}
+
+
+.Bbox a{
+  color:white;
+  font-family: 'Roboto-regular', sans-serif;
+  font-size: 20px;
+  text-align: center;
+}
+.Bbox a:hover{
+  color: #124254;
+  /* color: #ffc423; */
+}
+
+.Bcard:hover .Bpercent .Bnumber h2{
+  color: #124254;
+  font-size: 40px;
+}
+.Bpercent .Bnumber h2 span{
+  font-size:24px;
+  color: #777;
+  transition: 1s;
+}
+svg{
+  position: relative;
+  width: 150px;
+  height:150px;
+  z-index: -1000;
+}
+svg circle{
+  width: 100%;
+  height: 100%;
+  fill: none;
+  stroke: #003d55;
+  stroke-width: 10;
+  stroke-linecap: round;
+  transform: translate(5px, 5px);
+}
+svg circle:nth-child(2){
+  stroke-dasharray: 440;
+  stroke-dashoffset: 440;
+}
+.Bcard:nth-child(1) svg circle:nth-child(2){
+  stroke-dashoffset: calc(440 - (440 * 90) / 100);
+  stroke: #ff9124;
+}
+.Bcard:nth-child(2) svg circle:nth-child(2){
+  stroke-dashoffset: calc(440 - (440 * 85) / 100);
+  stroke: #ff9124;
+}
+.Bcard:nth-child(3) svg circle:nth-child(2){
+  stroke-dashoffset: calc(440 - (440 * 25) / 100);
+  stroke: #ff9124;
+}
+.Bcard:nth-child(4) svg circle:nth-child(2){
+  stroke-dashoffset: calc(440 - (440 * 37) / 100);
+  stroke:  #ff9124;
+}
+.Bcard:nth-child(5) svg circle:nth-child(2){
+  stroke-dashoffset: calc(440 - (440 * 100) / 100);
+  stroke:  #ff9124;
+}
+.Bcard:nth-child(6) svg circle:nth-child(2){
+  stroke-dashoffset: calc(440 - (440 * 45) / 100);
+  stroke:  #ff9124;
+}
+
+/*Vote Status per grade level*/
+.Bvotestatus p{
+  font-family: 'Roboto-regular', sans-serif;
+  color: #ffc423;
+  font-size: 300%;
+  position: relative;
+  letter-spacing: 1px;
+  text-align: center;
+  z-index:-1000;
+  margin-top: 15px;
+ }
+.table{
+ text-align: center;
+ margin-top: 0.5%;
+}
+.Bvs_gradelevel p{
+  font-family: 'Roboto-regular', sans-serif;
+  font-size: 20px;
+  position: relative;
+  letter-spacing: 3px;
+  text-align: center;
+  z-index:-1000;
+  margin-top: -25px;
+}
+.Bnp{
+  margin-top: 20px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+.Bnp a{
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 24px;
+}
+.Bnp a:hover {
+  background-color: #ffc423;
+  color: #1d6986;
 }
 
 /* Election Archives Folder*/
@@ -1117,7 +1299,7 @@ svg {
 /*Election Archives List*/
 
 .Barch_year {
-  font-family: Roboto regular;
+  font-family: 'Roboto-regular', sans-serif;;
   color: #ffb700;
   font-weight: inherit;
   font-size: 100%;
@@ -1160,7 +1342,7 @@ svg {
 }
 
 .Barch_container>div>p {
-  font-family: Roboto;
+  font-family: 'Roboto-regular', sans-serif;;
   font-size: 15px;
   object-fit: cover;
   text-align: center;
