--- a/css/admin_css/style_monitor.css
+++ b/css/admin_css/style_monitor.css
@@ -5,7 +5,14 @@
 	box-sizing: border-box;
 	list-style: none;
 }
-
+body {
+	background-image: url('../../img/adminBG.png');
+	background-size: cover;
+	font-size: 100%;
+	background-attachment: fixed;
+	width: auto;
+	min-height: 100%;
+  }
 nav {
 	background: #1d6986;
 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15), 0 3px 6px rgba(0, 0, 0, 0.23);
@@ -13,13 +20,11 @@ nav {
 	z-index: 3;
 	display: flex;
 }
-
 nav:after {
 	content: "";
 	clear: both;
 	display: table;
 }
-
 h2.aLogo-txt1 {
 	margin-top: 3px;
 	font-family: 'Roboto-regular', sans-serif;
@@ -29,12 +34,10 @@ h2.aLogo-txt1 {
 	letter-spacing: 6px;
 	text-decoration: none;
 }
-
 h2.aLogo-txt1 a {
 	text-decoration: none;
 	color: #ffffff;
 }
-
 h3.aLogo-txt2 {
 	margin-top: 0px;
 	color: #ffffff;
@@ -45,12 +48,10 @@ h3.aLogo-txt2 {
 	letter-spacing: 6px;
 	font-family: 'genericaregular', sans-serif;
 }
-
 h3.aLogo-txt2 a {
 	text-decoration: none;
 	color: #ffffff;
 }
-
 div.aLogo {
 	float: left;
 	position: relative;
@@ -58,7 +59,6 @@ div.aLogo {
 	margin-top: 14px;
 	margin-left: 40px;
 }
-
 nav ul {
 	float: right;
 	padding: 0;
@@ -69,7 +69,6 @@ nav ul {
 	text-align: center;
 	z-index: 4;
 }
-
 nav ul li {
 	/*Accounts, Election, Candidates, etc*/
 	display: inline-block;
@@ -78,7 +77,6 @@ nav ul li {
 	text-align: center;
 	width: 150px;
 }
-
 nav ul li a {
 	color: rgb(255, 255, 255);
 	line-height: 70px;
@@ -88,29 +86,23 @@ nav ul li a {
 	letter-spacing: 1px;
 	font-family: 'Roboto-regular', sans-serif;
 }
-
 nav ul li a:visited {
 	color: #ffffff;
 	text-decoration: none;
 }
-
 nav ul li a:hover {
 	color: #ffc423;
 	text-decoration: none;
 }
-
 nav ul li a:active {
 	text-decoration: none;
 }
-
 nav ul li:hover {
 	background-color: #124254;
 }
-
 nav ul li a:active {
 	color: green;
 }
-
 nav ul ul {
 	/*dropdown container*/
 	position: absolute;
@@ -120,7 +112,6 @@ nav ul ul {
 	visibility: hidden;
 	transition: top 0.3s;
 }
-
 nav ul ul li {
 	/*dropdown list*/
 	height: 50px;
@@ -129,59 +120,48 @@ nav ul ul li {
 	float: none;
 	display: list-item;
 }
-
 nav ul ul li a {
 	line-height: 50px;
 }
-
 nav ul ul li .logout::before {
 	content: "\f2f5";
 	font-family: "Font Awesome 5 Free";
 	padding: 0 10px 0 0;
 }
-
 nav ul ul li a:link {
 	color: rgb(0, 0, 0);
 }
-
 nav ul ul li a:visited {
 	color: black;
 	text-decoration: none;
 }
-
 nav ul ul li a:hover {
 	color: #1b1b1b;
 	box-shadow: none;
 	text-decoration: none;
 }
-
 nav ul ul li:hover {
 	background-color: #e0a900;
 	text-decoration: none;
 }
-
 nav ul ul li a:active {
 	color: #1b1b1b;
 	box-shadow: none;
 	text-decoration: none;
 }
-
 nav ul ul ul {
 	border-top: none;
 }
-
 nav ul ul ul li {
 	position: relative;
 	top: -60px;
 	left: 150px;
 }
-
 nav ul li:hover > ul {
 	top: 70px;
 	opacity: 1;
 	visibility: visible;
 }
-
 nav ul ul li {
 	background: #ffc423;
 	position: relative;
@@ -193,24 +173,20 @@ nav ul ul li {
 	border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 	z-index: 2;
 }
-
 nav ul ul li a {
 	line-height: 50px;
 	font-family: 'Roboto-regular', sans-serif;
 }
-
 nav ul ul ul li {
 	position: relative;
 	font-size: 1em;
 	top: -60px;
 	left: 150px;
 }
-
 .Ashow,
 .ADicon {
 	display: none;
 }
-
 .nav-toggle1,
 .nav-toggle2,
 .nav-toggle3,
@@ -219,7 +195,6 @@ nav ul ul ul li {
 .nav-toggle6 {
 	display: none;
 }
-
 @media all and (max-width: 968px) {
 	nav ul {
 		margin-right: 0px;
@@ -291,15 +266,12 @@ nav ul ul ul li {
 		content: "\f00d";
 	}
 }
-
 p {
 	font-size: 30px;
 	font-weight: 500;
 	font-family: 'genericaregular', sans-serif;
 }
-
 /* Container for flexboxes */
-
 section {
 	display: -webkit-flex;
 	display: flex;
@@ -307,7 +279,6 @@ section {
 	margin-top: 100px;
 	float: left;
 }
-
 article p {
 	font-family: 'Roboto-regular', sans-serif;
 	color: white;
@@ -316,7 +287,6 @@ article p {
 	letter-spacing: 3px;
 	position: relative;
 }
-
 article h1 {
 	font-family: 'genericaregular', sans-serif;
 	color: #ffc423;
@@ -326,18 +296,14 @@ article h1 {
 	letter-spacing: 3px;
 	margin-top: 10px;
 }
-
 /* Style the content */
-
 article {
 	-webkit-flex: 3;
 	-ms-flex: 3;
 	flex: 3;
 	padding: 10px;
 }
-
 /*For logos on top of welcome banner*/
-
 img.logos {
 	float: left;
 	padding-left: 10px;
@@ -345,7 +311,6 @@ img.logos {
 	width: 100px;
 	margin-bottom: 2em;
 }
-
 .logo-container {
 	position: relative;
 	display: -webkit-flex;
@@ -354,9 +319,7 @@ img.logos {
 	margin-top: 0px;
 	max-width: 700px;
 }
-
 /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
-
 @media (max-width: 600px) {
 	body,
 	section,
@@ -376,7 +339,6 @@ img.logos {
 }
 
 /*countdown*/
-
 aside {
 	color: #333;
 	float: left;
@@ -389,7 +351,6 @@ aside {
 	max-width: 500px;
 	float: right;
 }
-
 #AD-CD-headline {
 	font-weight: normal;
 	letter-spacing: 0.125rem;
@@ -398,14 +359,12 @@ aside {
 	color: black;
 	margin-bottom: 0.8em;
 }
-
 #AD-CD-contents {
 	border: 1px solid #ffc423;
 	border-width: 3px;
 	text-align: center;
 	padding: 0;
 }
-
 div li {
 	display: inline-block;
 	font-size: 1em;
@@ -414,12 +373,10 @@ div li {
 	text-transform: uppercase;
 	color: rgb(255, 255, 255);
 }
-
 div li span {
 	display: block;
 	font-size: 2.5rem;
 }
-
 aside p.Aelec-guide-txt {
 	font-family: 'Roboto-regular', sans-serif;
 	text-align: justify;
@@ -427,14 +384,12 @@ aside p.Aelec-guide-txt {
 	margin-top: 1em;
 	margin-bottom: 0;
 }
-
 #ADaside-container {
 	min-height: 100%;
 	padding-bottom: 50px;
 }
 
 /*footer*/
-
 .footer {
 	position: fixed;
 	left: 0;
@@ -445,7 +400,6 @@ aside p.Aelec-guide-txt {
 	background-color: #124254;
 	text-align: center;
 }
-
 div p.footer-txt {
 	position: relative;
 	margin-top: auto;
@@ -455,7 +409,6 @@ div p.footer-txt {
 	font-size: 10px;
 	color: #ffffff;
 }
-
 nav img.user-profile {
 	margin-top: 0;
 	height: 40px;
@@ -463,60 +416,83 @@ nav img.user-profile {
 }
 
 /*Datatable*/
-
-div.container {
-	background-color: #dddddd;
-	padding: 1rem;
-	margin-top: 3%;
-	margin-bottom: 3%;
+#datatable {
+	width: 100%;
 	border: 2px solid #124254;
-	width: 100% !important;
-	height: auto;
-	opacity: 80%;
-	font-size: 0.8rem;
-}
-
-#ADdataTable {
-	border-collapse: collapse !important;
+	font-family:'Roboto-regular', sans-serif;
+	border-collapse: collapse;
 	table-layout: auto;
 	margin: 0px;
 	text-align: center;
-	opacity: 100%;
-	width: 100% !important;
-}
-
-thead {
-	width: 100%;
-	color: #eeeeee;
+	background: rgba(255, 255, 255, 0.6);
+  }
+  
+  table.center {
+	margin-left: auto;
+	margin-right: auto;
+  }
+  
+  thead {
+	border: 1px solid #124254;
+	color: #EEEEEE;
 	background-color: #18566e;
 	text-align: center;
-	opacity: 100%;
-}
-
-thead input {
-	width: 100%;
-}
-
-th {
-	color: #ffffff;
+  }
+  
+  tbody {
+	border: 1px solid #124254;
+  }
+  
+  th {
+	font-size: large;
+	border: 1px solid #124254;
+	color: #EEEEEE;
 	background-color: #18566e;
 	text-align: center;
-	font-size: 0.8rem;
-	font-family: 'Roboto-regular', sans-serif;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	border: 1px solid #124254 !important;
-}
-
-td {
+  }
+  
+  td {
+	font-size: large;
 	border: 1px solid #124254;
 	padding: 0px;
 	max-width: 150px;
 	max-height: 150px;
 	overflow: hidden;
-	font-size: 0.8rem;
+  }
+
+  .container {
+	padding:2rem;
+	background-color: rgba(255,255,255, 0.7);
+	margin-top: 3%;
+	margin-bottom: 3%;
+	border: 2px solid #124254;
+	width: 80%;
+	height: auto;
+  }
+
+.pagination>li {
+  display: inline;
+  padding: 0px;
+  margin: 0px;
+  border: none;
 }
 
+.pagination>li>a, .pagination>li>span {
+  background-color: #EEEEEE !important
+}
+
+.pagination>li.active>a, .pagination>li.active>span {
+  background-color: #124254 !important
+}
+
+.modal-backdrop {
+  z-index: -1!important;
+}
+iframe {
+  height: 700px;
+}
+
+/*Pages Header*/
 #ADheader {
 	position: relative;
 	z-index: -1;
@@ -529,40 +505,22 @@ td {
 	letter-spacing: 6px;
 	text-transform: uppercase
 }
-
 h2.aHeader-txt {
 	font-size: 24px;
 	margin-top: 1%;
 	margin-bottom: 1%;
 }
 
-.row {
-	margin: 0;
-}
-
 /* Election*/
-
-.Belecstat p {
-	font-family: 'Roboto-regular', sans-serif;
-	color: #ffc423;
-	font-weight: inherit;
-	font-size: 300%;
-	position: relative;
-	letter-spacing: 3px;
-	text-align: center;
-	margin-top: 25px;
-	z-index: -1000;
-}
-
 .Belection_container {
 	display: grid;
-	grid-gap: 100px;
-	grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-	grid-template-rows: repeat(2, 500px);
-	padding: 60px;
-	margin-top: -5px;
+	grid-gap: 40px;
+	grid-template-columns: repeat(auto-fit, minmax(250px, 2fr));
+	grid-template-rows: repeat(5, auto);
+	padding-right: 5%;
+	padding-left: 5%;
+	padding-top: 4%;
 }
-
 .Bcan {
 	background-color: #777;
 	color: white;
@@ -571,7 +529,6 @@ h2.aHeader-txt {
 	text-align: center;
 	margin-top: 20px;
 }
-
 .Bparty {
 	background-color: #e6e4e4;
 	color: rgb(56, 138, 180);
@@ -579,7 +536,6 @@ h2.aHeader-txt {
 	text-align: center;
 	font-weight: initial;
 }
-
 .Bposition1,
 .Bposition2,
 .Bposition3,
@@ -598,7 +554,6 @@ h2.aHeader-txt {
 	box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
 	border-radius: 5px;
 }
-
 .Bposition1 h1,
 .Bposition2 h1,
 .Bposition3 h1,
@@ -607,12 +562,11 @@ h2.aHeader-txt {
 	color: rgb(0, 0, 0);
 	text-transform: uppercase;
 	font-family: 'Roboto-regular', sans-serif;
-	font-size: 100%;
+	font-size: 120%;
 	position: relative;
 	text-align: center;
 	margin-top: 2px;
 }
-
 .Bposition6 h1,
 .Bposition7 h1,
 .Bposition8 h1,
@@ -627,7 +581,6 @@ h2.aHeader-txt {
 	text-align: center;
 	margin-top: -5px;
 }
-
 .Bvote_percentage {
 	background: #0c1d34;
 	padding: 2px;
@@ -636,127 +589,101 @@ h2.aHeader-txt {
 	margin-top: 20px;
 	margin-left: 60px;
 }
-
 .Bvote_level {
 	background: #ffc423;
 	width: 90%;
-	height: 35px;
+	height: 25px;
 	border-radius: 1px;
 	color: #1d6986;
 	text-indent: 5px;
 	font-family: 'Roboto-regular', sans-serif;
-	font-size: 145%;
+	font-size: 130%;
 }
-
 .Banon {
 	float: left;
-	border-radius: 50%;
+	border-radius: 40%;
 }
-
 .Bbtn_post {
 	text-align: center;
 }
-
-.Bbtn_reset {
-	text-align: center;
-}
-
 .Bbtn_postresults {
 	border: none;
 	font-style: 'Roboto-regular', sans-serif;
-	background-color: #1d6986;
+	background-color: #ffc423;
 	padding: 1em 2.1em 1.1em;
 	cursor: pointer;
 	border-radius: 10px;
 	display: inline-block;
 	width: auto;
 	font-size: 90%;
-	text-align: center;
-	position: relative;
+	margin-top: 3%;
+	box-shadow: 0 8px 10px 1px rgba(0, 0, 0, .14), 0 3px 14px 2px rgba(0, 0, 0, .12), 0 5px 5px -3px rgba(0, 0, 0, .2)
 }
-
-.Bbtn_resetresults {
-	border: none;
-	font-style: 'Roboto-regular', sans-serif;
-	background-color: #1d6986;
-	padding: 1em 2.1em 1.1em;
-	cursor: pointer;
-	border-radius: 10px;
-	display: inline-block;
-	margin-top: 15px;
-	font-size: 80%;
-	width: auto;
-	text-align: center;
-}
-
 .Bbtn_postresults:hover {
-	background: #ffc423;
+	background: #e1a911;
 }
-
 .Bbtn_postresults:success {
 	color: white;
 }
-
-.Bbtn_resetresults:hover {
-	background: #ffc423;
-}
-
-.Bbtn_resetresults:success {
-	color: white;
-}
-
 .Bbtn_postresults:disabled {
 	opacity: 0.6;
 	cursor: not-allowed;
 }
-
+.Bbtn_reset {
+	text-align: center;
+}
+.Bbtn_resetresults {
+	border: none;
+	font-style: 'Roboto-regular', sans-serif;
+	background-color: #ffc423;
+	padding: 1em 1.3em 1.1em;
+	cursor: pointer;
+	border-radius: 10px;
+	display: inline-block;
+	font-size: 90%;
+	width: auto;
+	margin-top: 1%;
+	box-shadow: 0 8px 10px 1px rgba(0, 0, 0, .14), 0 3px 14px 2px rgba(0, 0, 0, .12), 0 5px 5px -3px rgba(0, 0, 0, .2)
+}
+.Bbtn_resetresults:hover {
+	background: #e1a911;
+}
+.Bbtn_resetresults:success {
+	color: white;
+}
 .Bbtn_resetresults:disabled {
 	opacity: 0.6;
 	cursor: not-allowed;
 }
 
 /* Vote Status Percentage */
-
 .Bcon {
 	width: 80%;
 	margin-left: auto;
 	margin-right: auto;
 }
-
-.Bvotestat p {
-	font-family: 'Roboto regular', sans-serif;
-	color: #ffc423;
-	font-weight: inherit;
-	font-size: 300%;
+/*  .Bvcontainer{ linear style
 	position: relative;
-	letter-spacing: 3px;
-	text-align: center;
-	margin-top: 5%;
-	z-index: -1000;
-}
-
-/*.Bvcontainer {
-	position: relative;
-	width: 100%;
-	justify-content: space-around;
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(100px, 4fr));
-	grid-template-rows: repeat(1, 200px);
-	margin-top: 4%;
-	z-index: -1000;
-}*/
-
-.Bvcontainer{
-	position: relative;
+	margin-top: 10%;
 	width: 100%;
 	justify-content: space-around;
 	display: grid; 
-	grid-column-gap: 20px; 
+	grid-column-gap: 10%; 
 	grid-row-gap: 5%;
-	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(100px, 2fr));
+	grid-template-rows: repeat(1, 250px);  
+}*/
+
+.Bvcontainer{ /*3x2 style*/
+	position: relative;
+	max-width: 1500px; 
+	justify-content: space-around;
+	display: grid; 
+	grid-column-gap: 10%; 
+	grid-row-gap: 4%;
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 	grid-template-rows: repeat(1, 250px);  
 }
-
 .Bvcontainer .Bcard {
 	position: relative;
 	width: 100%;
@@ -768,7 +695,6 @@ h2.aHeader-txt {
 	text-align: center;
 	transition: 0.5s;
 }
-
 .Bvcontainer .Bcard:before {
 	content: "";
 	position: absolute;
@@ -778,7 +704,6 @@ h2.aHeader-txt {
 	height: rgba(73, 163, 0, 0.03);
 	pointer-events: none;
 }
-
 .Bbox a {
 	color: white;
 	font-family: 'Roboto-regular', sans-serif;
@@ -787,59 +712,36 @@ h2.aHeader-txt {
 	padding: 10px;
 	background-color: black;
 }
-
+.Bbox a:hover{
+	color:#ffb700;
+}
 .circle{
-	color: #ffc423;
+	color: #ffc423; 
 	font-size: 200%;
 	font-family: 'Roboto-regular', sans-serif;
   }
 
-/*Election Archives Folder*/
-
-.Barchives p {
-	font-family: 'Roboto-regular', sans-serif;
+/*Vote Status Per Grade Level*/
+.Bvs_gradelevel p{
+	position: relative;
+	z-index: -1;
 	color: #ffc423;
-	font-weight: inherit;
-	font-size: 300%;
-	position: relative;
-	letter-spacing: 1px;
 	text-align: center;
-	margin-top: 40px;
-  }
-
-
-  
-  .Bcard:before {
-	content: '';
-	position: absolute;
-	top: 0;
-	left: 0%;
-	width: 100%;
-	height: 100%;
-	/*background: rgba(73, 163, 0, 0.03);*/
-	pointer-events: none;
-	z-index: 1;
-  }
-  
-  svg {
-	position: relative;
-	margin-top: -240px;
-	width: 150px;
-	height: 150px;
-	z-index: 1000;
-  }
+	font-family: 'Roboto-regular', sans-serif;
+	letter-spacing: 6px;
+	text-transform: uppercase;
+}
 
 /*Election Archives List*/
 
-.Barch_year {
+.Barch_year p{
 	font-family: 'Roboto-regular', sans-serif;
-	color: #030f15;
+	color:  white;
 	font-weight: inherit;
-	font-size: 150%;
+	font-size: 200%;
 	position: relative;
-	letter-spacing: 1px;
+	letter-spacing: 3px;
 	text-align: center;
-	margin-top: -10px;
 }
 
 .Barch_container {
@@ -917,20 +819,6 @@ h2.aHeader-txt {
 	color: #ffb700;
 	font-size: 85%;
 	margin-top: -5px;
-}
-
-/* Election Results Report */
-
-.Breport p {
-	font-family: 'Roboto-regular', sans-serif;
-	color: #ffc423;
-	font-weight: inherit;
-	font-size: 45px;
-	position: relative;
-	letter-spacing: 3px;
-	margin-top: 25px;
-	z-index: -1000;
-	text-align: center;
 }
 
 /*No On-going Election*/
