--- a/css/student_css/style_msgbox.css
+++ b/css/student_css/style_msgbox.css
@@ -208,7 +208,9 @@ nav ul ul ul li {
   left: 150px;
 }
 
-.Ashow, .Aicon, input {
+.Ashow,
+.Aicon,
+input {
   display: none;
 }
 
@@ -218,85 +220,88 @@ nav img.Auser-profile {
   width: 40px;
 }
 
+
 /* .fa-plus{
-  font-size: 15px;
-  margin-left: 40px;
+font-size: 15px;
+margin-left: 40px;
 } */
 
 @media all and (max-width: 968px) {
   nav ul {
-    margin-right: 0px;
-    margin-left: 0px;
-    float: left;
+      margin-right: 0px;
+      margin-left: 0px;
+      float: left;
   }
   /* nav .logo{
-    padding-left: 30px;
-    width: auto;
-    float: left;
-  } */
-  .Ashow+a, ul {
-    display: none;
+  padding-left: 30px;
+  width: auto;
+  float: left;
+} */
+  .Ashow+a,
+  ul {
+      display: none;
   }
-  nav ul li, nav ul ul li {
-    border-top: 3px solid #18566e;
-    display: block;
-    width: 100%;
+  nav ul li,
+  nav ul ul li {
+      border-top: 3px solid #18566e;
+      display: block;
+      width: 100%;
   }
   nav ul li a:hover {
-    box-shadow: none;
+      box-shadow: none;
   }
   .Ashow {
-    display: block;
-    background-color: #18566e;
-    color: white;
-    font-size: 1.2em;
-    padding: 0 20px;
-    line-height: 70px;
-    cursor: pointer;
+      display: block;
+      background-color: #18566e;
+      color: white;
+      font-size: 1.2em;
+      padding: 0 20px;
+      line-height: 70px;
+      cursor: pointer;
   }
   .Ashow:hover {
-    color: white;
+      color: white;
   }
   .Aicon {
-    display: block;
-    color: black;
-    position: absolute;
-    top: 0;
-    right: 40px;
-    line-height: 70px;
-    cursor: pointer;
-    font-size: 25px;
+      display: block;
+      color: black;
+      position: absolute;
+      top: 0;
+      right: 40px;
+      line-height: 70px;
+      cursor: pointer;
+      font-size: 25px;
   }
   nav ul ul {
-    top: 70px;
-    border-top: 0px;
-    border-bottom: 0px;
-    float: none;
-    position: static;
-    display: none;
-    opacity: 1;
-    visibility: visible;
+      top: 70px;
+      border-top: 0px;
+      border-bottom: 0px;
+      float: none;
+      position: static;
+      display: none;
+      opacity: 1;
+      visibility: visible;
   }
   nav ul ul a {
-    left: 0;
+      left: 0;
   }
   /* nav ul ul ul a{
-    padding-left: 80px;
-  }
-  nav ul ul ul li{
-    position: static;
-  } */
+  padding-left: 80px;
+}
+nav ul ul ul li{
+  position: static;
+} */
   [id^=btn]:checked+ul {
-    width: 100%;
-    left: 0;
-    display: block;
+      width: 100%;
+      left: 0;
+      display: block;
   }
   nav ul ul li {
-    border-top: 0px;
-    border-bottom: 0px;
+      border-top: 0px;
+      border-bottom: 0px;
   }
   span.cancel:before {
-    content: '\f00d';
+      content: '\f00d';
   }
 }
 
@@ -331,6 +336,7 @@ article h1 {
   margin-top: 10px;
 }
 
+
 /* Container for flexboxes */
 
 section {
@@ -342,6 +348,7 @@ section {
   float: left;
 }
 
+
 /* Style the content */
 
 article {
@@ -350,6 +357,7 @@ article {
   flex: 3;
   padding: 10px;
 }
+
 
 /*For logos on top of welcome banner*/
 
@@ -371,14 +379,18 @@ img.Alogos {
   max-width: 700px;
 }
 
+
 /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
 
 @media (max-width: 600px) {
-  body, section, .Acontainer {
-    -webkit-flex-direction: column;
-    flex-direction: column;
+  body,
+  section,
+  .Acontainer {
+      -webkit-flex-direction: column;
+      flex-direction: column;
   }
 }
+
 
 /*countdown*/
 
@@ -464,6 +476,7 @@ div p.footer-txt {
   color: #ffffff;
 }
 
+
 /*Student Message Box*/
 
 .cheader {
@@ -484,20 +497,22 @@ div p.footer-txt {
   border: 2px solid #fece4b;
 }
 
+
 /* Extra small devices (phones, 600px and down) */
 
 @media only screen and (max-width: 600px) {
   .ccontainer {
-    margin: 0px 0px 0px 0px;
-    ;
+      margin: 0px 0px 0px 0px;
+      ;
   }
 }
+
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 
 @media only screen and (max-width: 768px) {
   .ccontainer {
-    margin: 0px 0px 0px 0px;
+      margin: 0px 0px 0px 0px;
   }
 }
 
@@ -674,53 +689,54 @@ iframe {
   overflow-y: auto;
 }
 
+
 /*Responsiveness*/
 
 @media only screen and (max-height: 590px) {
   .msg_history {
-    height: 250px;
-    overflow-y: auto;
+      height: 250px;
+      overflow-y: auto;
   }
 }
 
 @media only screen and (min-height: 600px) {
   .msg_history {
-    height: 340px;
-    overflow-y: auto;
+      height: 340px;
+      overflow-y: auto;
   }
 }
 
 @media only screen and (min-height: 660px) {
   .msg_history {
-    height: 370px;
-    overflow-y: auto;
+      height: 370px;
+      overflow-y: auto;
   }
 }
 
 @media only screen and (min-height: 720px) {
   .msg_history {
-    height: 440px;
-    overflow-y: auto;
+      height: 440px;
+      overflow-y: auto;
   }
 }
 
 @media only screen and (min-height: 800px) {
   .msg_history {
-    height: 530px;
-    overflow-y: auto;
+      height: 530px;
+      overflow-y: auto;
   }
 }
 
 @media only screen and (min-width: 992px) {
   .msg_history {
-    height: 300px;
-    overflow-y: auto;
+      height: 300px;
+      overflow-y: auto;
   }
 }
 
 @media only screen and (min-width: 1200px) {
   .msg_history {
-    height: 300px;
-    overflow-y: auto;
+      height: 300px;
+      overflow-y: auto;
   }
 }
