--- a/css/student_css/modal_error_messages.css
+++ b/css/student_css/modal_error_messages.css
@@ -13,8 +13,11 @@ body {
   /* Sit on top */
   padding-top: 100px;
   /* Location of the box */
+  margin-bottom: 50px;
   left: 0;
   top: 0;
+  bottom: 0;
+  right: 0;
   width: 100%;
   /* Full width */
   height: 100%;
@@ -30,6 +33,7 @@ body {
 /* Modal Content */
 
 .F-modal-content-error {
+  font: 'Roboto-regular', sans-serif;
   z-index: 1000;
   /* border: 1px solid black; */
   width: 35%;
@@ -109,7 +113,7 @@ body {
   background-color: #fece4b;
   color: black;
   margin-left: 10px;
-  height: 35%;
+  height: 40px;
   width: 30%;
   border: none;
   border-radius: 30px;
@@ -118,8 +122,15 @@ body {
   cursor: pointer;
 }
 
+.F-OkBTN-error:hover {
+  background-color: #eebf40;
+}
+
 @media (max-width: 1200px) {
   .F-modal-content-error {
     width: 70%;
+  }
+  .F-OkBTN-error{
+    width: 40%;
   }
 }
