--- a/css/student_css/modal_error_messages.css
+++ b/css/student_css/modal_error_messages.css
@@ -11,7 +11,7 @@ body {
   /* Stay in place */
   z-index: 1;
   /* Sit on top */
-  padding-top: 100px;
+  padding-top: 80px;
   /* Location of the box */
   margin-bottom: 50px;
   left: 0;
@@ -33,8 +33,7 @@ body {
 /* Modal Content */
 
 .F-modal-content-error {
-  font: 'Roboto-regular', sans-serif;
-  z-index: 1000;
+  z-index: 1;
   /* border: 1px solid black; */
   width: 35%;
   margin: auto;
@@ -79,6 +78,12 @@ body {
   padding: 2px 16px;
   background-color: #f8f8f8;
   ;
+}
+
+#F-modal-message-text{
+  text-align: left;
+  font-family: 'Roboto-regular', sans-serif;
+  font-size: 18px;
 }
 
 .F-modal-body-error {
